all functional is released. refactoring and automation tests are needed