@@ -1,6 +1,4 @@
 import java.io.IOException;
-import java.sql.Connection;
-import java.sql.DriverManager;
 import java.sql.SQLException;
 
 public class Main {
@@ -12,5 +10,5 @@ public class Main {
 }
 
 
-//--module-path "D:\downloads\javaFX\javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml
+//--module-path "D:\downloads\javaFX\javafx-sdk-19\lib" --command.add-modules javafx.controls,javafx.fxml
 // D:\test1.txt tariffs
